# nope.gl-android

./: .clang-format  build.gradle.kts  build.sh  settings.gradle.kts
hooks/: android.py
nopegl/: build.gradle.kts  proguard-rules.pro
nopegl/src/androidTest/java/org/nopeforge/nopegl/: NopeGLTest.kt
nopegl/src/main/cpp/: CMakeLists.txt  nopegl.c
nopegl/src/main/java/org/nopeforge/nopegl/: NGLConfig.kt  NGLContext.kt  NGLScene.kt
nopegl/src/shared/java/org/nopeforge/nopegl/: NGLNode.kt
plugins/: settings.gradle.kts
plugins/nopegl-nodes/: build.gradle.kts
plugins/nopegl-nodes/src/main/kotlin/org/nopeforge/nopegl/: GenerateNodesPlugin.kt  utils.kt
plugins/nopegl-nodes/src/main/kotlin/org/nopeforge/nopegl/kotlin/: ChoiceEnum.kt  NodeClass.kt  StringExtension.kt  kotlinKeywords.kt
plugins/nopegl-nodes/src/main/kotlin/org/nopeforge/nopegl/specs/: Specs.kt  nodeType.kt
plugins/nopegl-nodes/src/main/kotlin/org/nopeforge/nopegl/task/: GenerateNodesTaks.kt
viewer/: build.gradle.kts
viewer/src/main/: AndroidManifest.xml
viewer/src/main/java/org/nopeforge/nopegl/: MainActivity.kt  NopeTextureView.kt
viewer/src/main/res/drawable/: ic_stop.xml
viewer/src/main/res/values/: strings.xml  themes.xml
viewer/src/test/java/org/nopeforge/nopegl/: ExampleUnitTest.kt
